Fix SonarQube security, reliability, maintainability, and coverage issues